# pRSS

./: .gitignore  LICENSE  README.md  main.py  news.db  pyproject.toml
backend/: crud.py  database.py  main.py  models.py  rss_fetcher.py  tasks.py
backend/routers/: articles.py  feeds.py  refresh.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
