[project]
name = "prss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.1",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "readability-lxml>=0.8.4.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]
